# tirc

./: CMakeLists.txt  README.md
cmake/: TwlMacros.cmake
src/: CMakeLists.txt  IrcConnection.cpp  IrcConnection.h  IrcMessage.h  IrcReplies.h  temp_tester.cpp  tirclib.h
